Feature: Add privacy disclaimer banner

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
             <p class="subtitle">Suivez l'historique de vos Hype Trains</p>
         </header>
 
+        <!-- Bandeau de confidentialité visible en permanence -->
+        <div class="privacy-banner">
+            <div class="privacy-icon">🔒</div>
+            <div class="privacy-content">
+                <strong>Confidentialité et sécurité</strong>
+                <p>Vos informations de connexion Twitch (token d'authentification) sont stockées <strong>uniquement dans votre navigateur</strong> (localStorage). Ce site n'a <strong>aucun accès</strong> à vos données. Toutes les requêtes API sont effectuées directement depuis votre navigateur vers l'API Twitch.</p>
+            </div>
+        </div>
+
         <main>
             <!-- Section de connexion -->
             <div id="login-section" class="section">
